wp-content/themes/theinternethealthreport/src/stylesheets/visualisations/_line.scss
.line {
  position: relative;

  &:before {
    content: '';
    display: block;
    width: 100%;
    height: 0;
    @include rem(padding-bottom, 400);

    @include media($medium-screen-up) {
      padding-bottom: 52%;
    }
  }

  &__svg {
    position: absolute;
    top: 0;
    left: 0;
  }

  &__data {
    fill: none;
    stroke: $primary-colour;
    @include rem(stroke-width, 3);
    opacity: 0;
  }
}

